--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,17 @@ dependencies {
     //dagger2
     implementation 'com.google.dagger:dagger:2.17'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
+    implementation 'com.android.support:recyclerview-v7:27.0.0'
+    implementation 'com.android.support:cardview-v7:27.0.0'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //RX
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "io.reactivex.rxjava2:rxjava:2.1.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
 }
